--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,2 @@
-##insurance.provider.url=http://localhost:8081/insurance-service/getAllPlans
-insurance.provider.url=http://localhost:8081/insurance.provider.baseroot/getAllPlans
-insurance.provider.baseroot=insurance-service
+insurance.provider.url=http://localhost:8081/insurance-service/getAllPlans
+
